--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "modern-normalize": "^3.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
