--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "helmet": "^7.1.0",
     "modern-normalize": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
